--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         <option value="">-- Select Option --</option>
         <option value="6mwt">6MWT</option>
 	 <option value="60m">60month letter</option>
+	    <option value="ono">ONO</option>
+	    <option value="tss">TSS</option>
            </select>
 
     <!-- PDF Viewer Container -->
@@ -54,7 +56,8 @@
     // Map dropdown values to PDF/Image URLs
 const pdfs = {
     "6mwt": "assets/6MWT.pdf",
-    "60m": "assets/60monthletter.pdf"
+    "tss": "assets/TSS.pdf",
+"ono": "assets/ONO.pdf"
 };
 
 
