--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <h1>DOCUMENT REQUIREMENTS</h1>
+    <h1>60MONTH DOCUMENTS</h1>
     <p>Select an option from the dropdown to display the associated PDF:</p>
 
     <!-- Dropdown Menu -->
