--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
 
     // Map dropdown values to PDF/Image URLs
 const pdfs = {
+	"tss": "assets/60monthletter.pdf",
     "6mwt": "assets/6MWT.pdf",
-    "tss": "assets/TSS.pdf",
-"ono": "assets/ONO.pdf"
+    "tss": "assets/TSS.PDF",
+"ono": "assets/ONO.PDF"
 };
 
 
