--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <option value="6mwt">6MWT</option>
         <option value="ono">ONO</option>
         <option value="tss">TSS</option>
-        <option value="60m">60-Month Letter</option>
         <option value="discontinue">Discontinue Script</option>
         <option value="poc">POC Rx</option>
+        <option value="60m">60month Letter</option>
     </select>
 
     <!-- PDF Viewer Container -->
