--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF forms</title>
     <style>
+
+body {
+            background-image: url('IMG_7391.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            background-position: right; /* This will position the image at the right of the body */ 
+        }
+
+h1 {
+    color: white; /* Makes the text color white */
+    font-family: 'Calibri', sans-serif; /* Sets the font to Calibri with sans-serif fallback */
+}
+
+p {
+    color: white; /* Makes the text color white */
+    font-family: 'Calibri', sans-serif; /* Sets the font to Calibri with sans-serif fallback */
+}
+
+
         /* Basic Styling */
         body {
             font-family: Arial, sans-serif;
@@ -36,7 +56,7 @@
 
     <!-- Dropdown Menu -->
     <select id="dropdown">
-        <option value="">-- Select Option --</option>
+        <option value="">60month restart documents</option>
         <option value="6mwt">6MWT</option>
         <option value="ono">ONO</option>
         <option value="tss">TSS</option>
